# intel-panam-demonstrations

./: README.md
Voicechatbot-openai/: .gitignore  README.md  app.py  chatbot_function.py
autonomousagents/: app.py  app2.py  app3.py  requirements.txt
casestudy/: requirements.txt
casestudy/pre-processing/: app.py
casestudy/testing/: app.py
casestudy/ui/: app.py
chatbotmemory/: app.py  requirements.txt
endtoend/: .gitignore  pyproject.toml
endtoend/app/: server.py
interactingwithrest/: app.py
multiagentsystems/: README.md  agents.py  main.py  output.md  requirements.txt  tasks.py
multiagentsystems/db/: chroma.sqlite3
multimodality/: README.md  app.py
qawithcsv/: README.md  app.py  requirements.txt
servicenowintegration/: .env.sample  README.md  index.py  query.py  requirements.txt  test_service_now_kb_access.py  ui.py
timeseries/: forecasting.ipynb
